--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
         "index.js"
     ],
     "scripts": {
+        "serve-orderbook": "concurrently --kill-others \"tsc -w\" \"nodemon --watch ./lib ./lib/index.js\"",
         "test": "echo \"Error: no test specified\" && exit 1",
         "clean": "rimraf lib dist",
         "build": "tsc",
         "build:clean": "npm run clean && npm run build",
-        "build:watch": "npm run clean && tsc --watch",
-        "prepublishOnly": "npm run build:clean"
+        "build:watch": "npm run clean && tsc --watch"
     },
     "repository": {
         "type": "git",
@@ -39,9 +39,11 @@
         "@types/node": "^15.12.4",
         "@typescript-eslint/eslint-plugin": "^4.27.0",
         "@typescript-eslint/parser": "^4.26.0",
+        "concurrently": "^7.6.0",
         "eslint": "^7.32.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-prettier": "^4.0.0",
+        "nodemon": "^2.0.20",
         "prettier": "^2.4.1",
         "ts-node": "^10.8.1",
         "typescript": "^4.7.4"
